kubernetes/utility/apps/git-system/forgejo/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    external-dns/unifi: "true"
    gatus.home-operations.com/endpoint: |
      group: infrastructure
      interval: 5m
      path: /api/healthz
      client:
        dns-resolver: tcp://192.168.1.1:53
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: envoy
      namespace: networking
      sectionName: https
  hostnames:
    - git.techtales.io
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 80
